[package]
name = "smxdasm"
version = "0.1.0"
description = "A library for disassembling SMX"
repository = "https://github.com/rumblefrog/smx-dasm-rs"
license = "gplv3"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num_enum = "0.4.2"
bitflags = "1.2.1"
byteorder = "1.3.2"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }